2007-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-strip-charset-parameters): New function.
	(gnus-mime-view-part-as-charset): Use it; redisplay subpart currently
	displayed of multipart/alternative part if it is invoked from summary
	buffer.
	(gnus-article-part-wrapper): Select article window.

	* mm-view.el (mm-inline-text-html-render-with-w3m)
	(mm-inline-text-html-render-with-w3m-standalone)
	(mm-inline-render-with-function): Use mail-parse-charset by default.

2007-04-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-inews-yank-articles): Use
	message-exchange-point-and-mark instead of exchange-point-and-mark.

2007-04-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-yank-original): Make sure cited text ends with
	newline; don't exchange point and mark.

2007-04-07  Chong Yidong  <cyd@stupidchicken.com>

	* tls.el (open-tls-stream): Properly handle case where there
	is no associated buffer.

2007-04-03  Thien-Thi Nguyen  <ttn@gnu.org>

	* gnus-msg.el (gnus-inews-yank-articles): Fix bug: After
	message-yank-original, make sure (< mark TEXT point).

2007-03-31  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnmail.el (nnmail-spool-file): Mark as obsolete.
	(nnmail-get-new-mail): Reformat.

	* gnus-registry.el (gnus-registry-cache-save): Add FIXME comment.

	* gmm-utils.el: Fix Commentary.
	(gmm-tool-bar-from-list): Fix typo in doc string.

2007-03-27  Thien-Thi Nguyen  <ttn@gnu.org>

	* message.el (message-yank-original): Fix bug:
	Don't switch point and mark unnecessarily.

2007-03-25  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* gnus-msg.el (gnus-setup-message, gnus-inews-add-send-actions): Move
	evaluation of gnus-extended-version to ensure correct generation of the
	User-Agent header when message-generate-headers-first is used.

2007-03-24  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-button-alist): Also catch `<f1> k ...'.
	(gnus-treat-display-x-face): Fix doc string.
