@@ -1,3 +1,9 @@
+2007-05-09  Didier Verna  <didier@xemacs.org>
+
+	* gnus-diary.el, nndiary.el: Remove the description comment (nndiary is
+	now properly documented in the Gnus manual).  Fix the spelling of "Back
+	End".
+
 2007-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus-art.el (gnus-mime-strip-charset-parameters): New function.
